--- a/src/Plugin/Plugin.csproj
+++ b/src/Plugin/Plugin.csproj
@@ -4,21 +4,24 @@
         <TargetFramework>net35</TargetFramework>
         <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
+        <AssemblyName>Plugin</AssemblyName>
     </PropertyGroup>
     
     <ItemGroup>       
-      <PackageReference Include="BepInEx.Core" Version="5.4.11" />
+      <PackageReference Include="BepInEx.Core" Version="5.4.11" />       
+      <PackageReference Include="H3VR.GameLibs" Version="0.100.6-r.0" />
       <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
       <PackageReference Include="UnityEngine.Core" Version="5.6.1" />
     </ItemGroup>
     
     <ItemGroup>
-      <Reference Include="Assembly-CSharp">
-        <HintPath>..\libs\Assembly-CSharp_publicized.dll</HintPath>
-      </Reference>
       <Reference Include="MMHOOK_Assembly-CSharp">
         <HintPath>..\libs\MMHOOK_Assembly-CSharp.dll</HintPath>
       </Reference>
     </ItemGroup>
+    
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="copy $(TargetPath) &quot;G:\H3VR Prts\TSInstallLocal\H3VR\profiles\Allmods\BepInEx\monomod\Andrew_FTW-FTW_Arms_AFCL\FTWScripts\Assembly-CSharp.ftwScripts.mm.dll&quot;" />
+    </Target>
 
 </Project>
